@@ -4,7 +4,7 @@
 
 	<groupId>org.thymoljs</groupId>
 	<artifactId>thymol</artifactId>
-	<version>2.0.1-pre.6</version>
+	<version>2.0.1-pre.7</version>
 
 	<name>Thymol Project</name>
 	<description>Javascript Thymeleaf Emulation</description>
@@ -30,8 +30,8 @@
 		<maven-clean-plugin-version>3.0.0</maven-clean-plugin-version>
 		<maven-compiler-plugin-version>3.5.1</maven-compiler-plugin-version>
 		<maven-war-plugin-version>3.0.0</maven-war-plugin-version>
-		<maven-surefire-plugin-version>2.19.1</maven-surefire-plugin-version>
-		<maven-failsafe-plugin-version>2.19.1</maven-failsafe-plugin-version>
+		<maven-surefire-plugin-version>3.0.0-M4</maven-surefire-plugin-version>
+		<maven-failsafe-plugin-version>3.0.0-M4</maven-failsafe-plugin-version>						
 		<maven-resources-plugin-version>3.0.1</maven-resources-plugin-version>
 		<maven-dependency-plugin-version>2.10</maven-dependency-plugin-version>
 		<!---->
@@ -295,6 +295,7 @@
 								<id>integration-test-node</id>
 								<goals>
 									<goal>integration-test</goal>
+              								<goal>verify</goal>
 								</goals>
 							</execution>
 						</executions>
@@ -352,6 +353,7 @@
 								<id>integration-test-jetty</id>
 								<goals>
 									<goal>integration-test</goal>
+              								<goal>verify</goal>
 								</goals>
 							</execution>
 						</executions>
@@ -419,7 +421,12 @@
 							<webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
 							<webdriver.gecko.driver>${webdriver.gecko.driver}</webdriver.gecko.driver>
 						</systemPropertyVariables>
-						<argLine>-Dfile.encoding=UTF-8 -DthDeploy=${thDeploy} -Djava.ext.dirs=${project.build.directory}/lib</argLine>
+						<argLine>-Dfile.encoding=UTF-8 -DthDeploy=${thDeploy}</argLine>
+						<additionalClasspathElements>
+							<additionalClasspathElement>${project.build.directory}/lib/icu4j-58.1.jar</additionalClasspathElement>
+							<additionalClasspathElement>${project.build.directory}/lib/icu4j-localespi-58.1.jar</additionalClasspathElement>
+							<additionalClasspathElement>${project.build.directory}/lib/javagalician-java6-1.1.jar</additionalClasspathElement>																					
+						</additionalClasspathElements>
 						<properties>
 							<thThymolPrelude></thThymolPrelude>
 						</properties>
